--- a/animation.html
+++ b/animation.html
@@ -51,14 +51,14 @@
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
-						<b>Portfolio</b>
+						<b>Animations projektet</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
 
                     <li>
                          <a href="#cd-placeholder-4">
-						<b>Contact</b>
+						<b>Animations øvelser</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
@@ -75,15 +75,15 @@
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Intro</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
+               <p>I dette forløb har vi skulle lave vores egen interaktive animation. Vi har skulle tegne al grafik, karaktere og scenografi selv, samt optage og redigere lydsiden. Historien skulle følge en bestemt udleveret struktur og blandt andet indeholde; To forskellige slutninger, et interaktivt valg imellem to ting, et automatisk valg, fortaget af computeren, en interaktiv aktivitet der skal gentages et bestemt antal gange og en tidsbegrænsning på den interaktive aktivitet.
+                    <br> Scenografien skulle tegnes i vector - kun 1 scene og kun 1 kameravinkel.
+                    <br> Der skulle designes og tegnes mindst 2 karaktere til fortællingen, som skulle tegnes i Illustrator og laves Sprite-sheets på.
+                    <br> Alle animationer skulle være CSS- keyframe animationer, der måtte ikke bruges gif-animationer.
+                    <br> Desværre løb tiden fra mig og projektet blev ikke helt færdigt. Jeg ønsker dog at færdiggøre det, hen af vejen, da opgaven var, for mig, enormt spændende.
                </p>
           </section>
-          <!-- #cd-placeholder-1 -->
 
           <section id="cd-placeholder-2" class="cd-section cd-container">
-          </section>
-          <section id="cd-placeholder-3" class="cd-section cd-container">
 
                <h2>Animations projekt</h2>
           </section>
@@ -107,9 +107,46 @@
                </div>
           </div>
 
+          <div class="animation-section">
+               <div class="animation-content">
+                    <iframe src="animation/02.02.03/animation.html" width="1200px" height="700px"></iframe>
+                    <h2>Baggrundsskitser på papir og rentegning</h2>
+                    <p>De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
+               </div>
+          </div>
+
+          <div class="animation-section">
+               <div class="animation-content">
+                    <iframe src="animation/02.01.04/site/animation.html" width="1200px" height="700px"></iframe>
+                    <h2>Baggrundsskitser på papir og rentegning</h2>
+                    <p>De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
+               </div>
+               <br>
+          </div>
+          <section id="cd-placeholder-4" class="cd-section cd-container">
+
+               <h2>CSS Animation øvelse</h2>
+          </section>
+          <div class="animation-section">
+               <div class="animation-content">
+                    <iframe src="animation/ovelse-2-css-animation/css-animation/index.html" width="1200px" height="700px"></iframe>
+                    <h2>Animations øvelse med CSS Animation</h2>
+                    <p>I øvelsen skulle vi placere objekterne korrekt og få toget til at køre ind i billedet, bilen til at køre op af vejen og stoppe før toget og bommen til at gå ned for bilen. I mit tilfælde kunne jeg ikke få bommen til at reagere som jeg gerne ville.
+                         <br>For at vise eksemplet er animation-iteration-count sat til infinity.</p>
+               </div>
+               <br>
+          </div>
+
+          <div class="animation-section">
+               <div class="animation-content">
+                    <iframe src="animation/ovelse-1-CSS-Positionering-master/CSS-Positionering-master/position.html" width="1200px" height="700px"></iframe>
+                    <h2>Transformation placerings øvelse</h2>
+                    <p>I denne øvelse skulle vi placere objekterne korrekt på billedet og få dem til at blive der når man re-sizede skærmen.</p>
+               </div>
+               <br>
+          </div>
 
           <footer class="parent_foot">
-
                <div class="content_foot">
 
                     <a href="mailto:
