--- a/ux.html
+++ b/ux.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="da" class="animated fadeIn">
+
 <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,13 +43,13 @@
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
-						<b>Intro</b>
+						<b>UX Intro</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
-						<b>Cases</b>
+						<b>Joe &amp; The Juice</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
@@ -71,95 +72,56 @@
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>UX</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
+               <p>I dette forløb har vi arbejdet med at designe bruger oplevelser ud fra brugersiturationer og bruger behov. De fire fokus områder har været:</p>
+               <ul class="ux-li">
+                    <li>UX - User Experience Design</li>
+                    <li>UI - User Interface Design</li>
+                    <li>Management - forretningsforståelse</li>
+                    <li>Development - programmering
+                    </li>
+               </ul>
+               <p>Vi har arbejdet med
+                    <aabr title="Business Model Canvas">BMC</aabr>, experience maps, design chartrette, datamining, brugerrejser, BERT-test, AOF og SCRUM, for at udvikle vores forståelse for forretning og tidsstyring.
                </p>
+
+
           </section>
           <!-- #cd-placeholder-1 -->
 
           <section id="cd-placeholder-2" class="cd-section cd-container">
-               <h2>Cases</h2>
+               <h2 id="h2-center">Joe &amp; The juice Loyalty App</h2>
+          </section>
+          <div class="ux-section">
+               <h1>Dokumentations-site</h1>
+               <br>
+               <iframe src="ux/index.html" height="800px" width="1200px"></iframe>
+               <br>
 
-
-               <div class="port-section">
-                    <ul class="port-grid">
-                         <li>
-                              <div class="port-box port-img-1">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>Stilart</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-2">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>20 bokse</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-3">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>Re-design</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                    </ul>
+               <div class="ux-content">
+                    <h1>Præsentation</h1>
+                    <iframe src="https://docs.google.com/presentation/d/1T28mOcpyUnTTYjmxZ2-G-SigSzEghVWKuzfJK8jIbuU/edit?usp=sharing" height="800" width="1200" allowfullscreen></iframe>
                </div>
-          </section>
-          <!-- #cd-placeholder-2 -->
+          </div>
 
           <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="https://xd.adobe.com/view/70905889-8aec-43b5-5fae-cb1c87de05c1-06a1/" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">her.</a>
-               </p>
-          </section>
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html">her.</a>
-
-               </p>
 
 
 
-          </section>
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="               http://www.kroghport.dk/kea/04-responsive%28OLD%29/16_bokse/16_bokse.html#" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>16 Bokse. Css/html transformation øvelse.</p>
+               <section id="cd-placeholder-3" class="cd-section cd-container">
+
+
+               </section>
+               <section id="cd-placeholder-3" class="cd-section cd-container">
+
+               </section>
+
+               <section id="cd-placeholder-3" class="cd-section cd-container">
+
+               </section>
 
 
 
-          </section>
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="               http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01.04.a_20_bokse/index.html" height="650" width="100%" style="background-color: white">
-               </iframe>
-               <p>20 Bokse. Css/html transformation øvelse.</p>
-
-
-
-          </section>
-
-
-
-          <!--
+               <!--
           <h2>Example</h2>
           <div class="iframe">
                <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="90%" style="background-color: white">
@@ -172,7 +134,7 @@
           </p>
 -->
 
-
+          </section>
 
           <!-- #cd-placeholder-3 -->
 
@@ -197,6 +159,7 @@ rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
 </a>
                </div>
           </footer>
+
      </main>
      <!-- .cd-main-content -->
 
