--- a/webdesign.html
+++ b/webdesign.html
@@ -24,106 +24,69 @@
                     <li><a href="#0">Example</a></li>
                </ul>
           </nav>
-          <!-- cd-primary-nav -->
-
      </header>
-     <!-----------------------------------------
-     responsive
-     ------------------------------------------->
-
      <section id="cd-intro">
           <div id="cd-intro-tagline">
                <h1>KEA semester portfolio</h1>
           </div>
-          <!-- #cd-intro-tagline -->
      </section>
-     <!-- #cd-intro -->
-
      <div class="cd-secondary-nav">
           <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
           <nav>
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
 						<b>Intro</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
-						<b>Cases</b>
-						<span></span><!-- icon -->
+						<b>Stilart-site</b>
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-3">
-						<b>Example</b>
-						<span></span><!-- icon -->
+						<b>Draør bistro</b>
+						<span></span>
 					</a>
                     </li>
+
+                    <li>
+                         <a href="#cd-placeholder-4">
+						<b>CSS Øvelser</b>
+						<span></span>
+					</a>
+                    </li>
+
                     <li>
                          <a href="index.html">
 						<b>Home</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                </ul>
           </nav>
      </div>
-     <!-- .cd-secondary-nav -->
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Webdesign</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
+               <p>I vores første tema, havde vi 4 hovedpunkter:</p>
+               <ul class="ux-li">
+                    <li>Content first</li>
+                    <li>HTML &amp; CSS</li>
+                    <li>User Interface</li>
+                    <li>Resonsive webdesign</li>
+               </ul>
+               <p>Her undersøgte vi stilarter, lærte at lave moodboards, lærte at analyser ved hjælp af en grafisk analyse og sammensætte en pitch af vores resultater.
+                    <br> Vi lærte om filstruktur på vores eget domæne, semantiske elementer og hvordan vi lære os selv at læse HTML. Vi opdagede nye Tags og fik indsigt i hvor vi kunne gå hen for at lære mere.
+                    <br> Vu blev trænet i photoshop og dets muligheder og typografi, herunder google-fonts og font-face og hvordan man implementere det på et site. Vi blev introduceret til media queries og flex-box, der er måder at gøre et site responsivt.
                </p>
-          </section>
-          <!-- #cd-placeholder-1 -->
 
+          </section>
           <section id="cd-placeholder-2" class="cd-section cd-container">
-               <h2>Cases</h2>
-
-
-               <div class="port-section">
-                    <ul class="port-grid">
-                         <li>
-                              <div class="port-box port-img-1">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>Stilart</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-2">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>20 bokse</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                         <li>
-                              <div class="port-box port-img-3">
-                                   <a href="#">
-                                        <div class="port-info">
-                                             <h3>Re-design</h3>
-
-                                        </div>
-                                   </a>
-                              </div>
-                         </li>
-                    </ul>
-               </div>
-          </section>
-          <!-- #cd-placeholder-2 -->
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
+               <h2>Stilart-site</h2>
                <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="100%" style="background-color: white">
                </iframe>
                <p>Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">her.</a>
@@ -131,55 +94,27 @@
           </section>
 
           <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
+               <h2>Re-design af Dragør Bistro</h2>
                <iframe src="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html" height="650" width="100%" style="background-color: white">
                </iframe>
                <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html">her.</a>
 
                </p>
-
-
-
           </section>
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="               http://www.kroghport.dk/kea/04-responsive%28OLD%29/16_bokse/16_bokse.html#" height="650" width="100%" style="background-color: white">
+
+          <section id="cd-placeholder-4" class="cd-section cd-container">
+               <h2>16 bokse - CSS transformations øvelse.</h2>
+               <iframe src="http://www.kroghport.dk/kea/04-responsive%28OLD%29/16_bokse/16_bokse.html#" height="650" width="100%" style="background-color: white">
                </iframe>
                <p>16 Bokse. Css/html transformation øvelse.</p>
-
-
-
           </section>
 
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Example</h2>
-               <iframe src="               http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01.04.a_20_bokse/index.html" height="650" width="100%" style="background-color: white">
+          <section id="cd-placeholder-4" class="cd-section cd-container">
+               <h2>20 Bokse typografi-formateringsøvelse</h2>
+               <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01.04.a_20_bokse/index.html" height="650" width="100%" style="background-color: white">
                </iframe>
                <p>20 Bokse. Css/html transformation øvelse.</p>
-
-
-
           </section>
-
-
-
-          <!--
-          <h2>Example</h2>
-          <div class="iframe">
-               <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="90%" style="background-color: white">
-
-
-               </iframe>
-          </div>
-          <p>
-               Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses her: <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">Stilart Site</a>
-          </p>
--->
-
-
-
-          <!-- #cd-placeholder-3 -->
-
           <footer class="parent_foot">
 
                <div class="content_foot">
