--- a/animation.html
+++ b/animation.html
@@ -7,10 +7,16 @@
      <link rel="stylesheet" href="css/stylesheet.css">
      <link rel="stylesheet" href="css/reset.css">
      <link rel="stylesheet" href="portfolo/css/port.css">
-     <!-- CSS reset -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#00aba9">
+     <meta name="theme-color" content="#ffffff">
      <title>Kroghport</title>
 </head>
 
@@ -25,8 +31,6 @@
                     <li><a href="#0">Timeline</a></li>
                </ul>
           </nav>
-          <!-- cd-primary-nav -->
-
      </header>
 
 
@@ -34,9 +38,8 @@
           <div id="cd-intro-tagline">
                <h1>KEA semester portfolio</h1>
           </div>
-          <!-- #cd-intro-tagline -->
      </section>
-     <!-- #cd-intro -->
+
 
      <div class="cd-secondary-nav">
           <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
@@ -71,7 +74,7 @@
                </ul>
           </nav>
      </div>
-     <!-- .cd-secondary-nav -->
+
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Intro</h2>
@@ -106,45 +109,39 @@
                     <p>De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
                </div>
           </div>
-
+          <h2 class="h2-center">Baggrundsskitser på papir og rentegning</h2>
+          <p class="p-align">De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
           <div class="animation-section">
-               <div class="animation-content">
-                    <iframe src="animation/02.02.03/animation.html" width="1200px" height="700px"></iframe>
-                    <h2>Baggrundsskitser på papir og rentegning</h2>
-                    <p>De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
-               </div>
-          </div>
+               <iframe src="animation/02.02.03/animation.html" width="1200px" height="700px"></iframe>
 
-          <div class="animation-section">
-               <div class="animation-content">
-                    <iframe src="animation/02.01.04/site/animation.html" width="1200px" height="700px"></iframe>
-                    <h2>Baggrundsskitser på papir og rentegning</h2>
-                    <p>De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
-               </div>
-               <br>
           </div>
+          <h2 class="h2-center">Baggrundsskitser på papir og rentegning</h2>
+          <p class="p-align">De første skitser kom på plads. Først øvelse, med 4 miniskitser, så bagefter en øvelse mellem kontrasten lys/mørke fokuspunkter, og til sidst den færdige skitse som jeg ville tegne mit design på.</p>
+          <div class="animation-section">
+               <iframe src="animation/02.01.04/site/animation.html" width="1200px" height="700px"></iframe>
+
+          </div>
+          <br>
+
           <section id="cd-placeholder-4" class="cd-section cd-container">
-
-               <h2>CSS Animation øvelse</h2>
+               <h2>CSS Animation øvelser</h2>
           </section>
+          <br>
+          <h2 class="h2-center">Animations øvelse med CSS Animation</h2>
+          <p class="p-align">I øvelsen skulle vi placere objekterne korrekt og få toget til at køre ind i billedet, bilen til at køre op af vejen og stoppe før toget og bommen til at gå ned for bilen. I mit tilfælde kunne jeg ikke få bommen til at reagere som jeg gerne ville.
+               <br>For at vise eksemplet er animation-iteration-count sat til infinity.</p>
+          <br>
           <div class="animation-section">
-               <div class="animation-content">
-                    <iframe src="animation/ovelse-2-css-animation/css-animation/index.html" width="1200px" height="700px"></iframe>
-                    <h2>Animations øvelse med CSS Animation</h2>
-                    <p>I øvelsen skulle vi placere objekterne korrekt og få toget til at køre ind i billedet, bilen til at køre op af vejen og stoppe før toget og bommen til at gå ned for bilen. I mit tilfælde kunne jeg ikke få bommen til at reagere som jeg gerne ville.
-                         <br>For at vise eksemplet er animation-iteration-count sat til infinity.</p>
-               </div>
-               <br>
+               <iframe src="animation/ovelse-2-css-animation/css-animation/index.html" width="1200px" height="700px"></iframe>
+          </div>
+          <h2 class="h2-center">Transformation placerings øvelse</h2>
+          <p class="p-align">I denne øvelse skulle vi placere objekterne korrekt på billedet og få dem til at blive der når man re-sizede skærmen.</p>
+          <br>
+          <div class="animation-section">
+
+               <iframe src="animation/ovelse-1-CSS-Positionering-master/CSS-Positionering-master/position.html" width="1200px" height="700px"></iframe>
           </div>
 
-          <div class="animation-section">
-               <div class="animation-content">
-                    <iframe src="animation/ovelse-1-CSS-Positionering-master/CSS-Positionering-master/position.html" width="1200px" height="700px"></iframe>
-                    <h2>Transformation placerings øvelse</h2>
-                    <p>I denne øvelse skulle vi placere objekterne korrekt på billedet og få dem til at blive der når man re-sizede skærmen.</p>
-               </div>
-               <br>
-          </div>
 
           <footer class="parent_foot">
                <div class="content_foot">
