--- a/intro.html
+++ b/intro.html
@@ -10,6 +10,13 @@
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#00aba9">
+     <meta name="theme-color" content="#ffffff">s
      <title>Kroghport</title>
 </head>
 
@@ -18,10 +25,9 @@
           <nav class="cd-primary-nav">
 
                <ul>
-                    <li><a href="intro.html">Home</a></li>
-                    <li><a href="#0">Om</a></li>
-                    <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Timeline</a></li>
+                    <li><a href="#cd-intro">Home</a></li>
+                    <li><a href="#cd-placeholder-1">Om</a></li>
+                    <li><a href="#cd-placeholder-2">Portfolio</a></li>
                </ul>
           </nav>
 
@@ -56,13 +62,7 @@
 					</a>
                     </li>
                     <li>
-                         <a href="#cd-placeholder-3">
-						<b>Timeline</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="intro.html">
+                         <a href="#cd-intro">
 						<b>Home</b>
 						<span></span><!-- icon -->
 					</a>
@@ -126,27 +126,6 @@
                                         </div>
                                    </a>
                               </div>
-                              <li>
-                                   <div class="port-box port-img-4">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Ux</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
-
-                              <li>
-                                   <div class="port-box port-img-1">
-                                        <a href="#">
-                                             <div class="port-info">
-                                                  <h3>Webdesign</h3>
-
-                                             </div>
-                                        </a>
-                                   </div>
-                              </li>
                     </ul>
                </div>
 
@@ -157,15 +136,6 @@
 
 
           </section>
-          <!-- #cd-placeholder-2 -->
-
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-               <h2>Chat</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi nostrum aut voluptates veniam. Cum neque quam fuga sapiente quidem eum necessitatibus nulla, cupiditate a, repudiandae iusto in dolor eaque commodi nostrum consequuntur dolores velit eligendi dolorem quae. Distinctio quae, cumque aliquid quos consequuntur perspiciatis voluptates, laboriosam velit qui et aut sint esse nemo voluptatibus, dolore veritatis natus facilis commodi sed. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias sunt mollitia atque tempore ea cum exercitationem, quisquam est consectetur tempora ipsam, obcaecati voluptate a. Autem minus cumque voluptatem eaque fugit nostrum reprehenderit incidunt officia. Nesciunt reiciendis delectus officiis fugit sint at totam nisi commodi repellendus iusto dolorum molestias dignissimos natus, impedit quam atque ex voluptas ut facere assumenda iure incidunt rerum vitae accusamus? Et voluptatibus unde, fugiat tenetur sed dolore, praesentium magni illo nobis incidunt, possimus doloremque dolorem sunt. Aliquid ducimus delectus esse voluptatem officia perferendis, a voluptate omnis adipisci expedita distinctio praesentium natus veniam accusamus iure, quasi, inventore reiciendis.
-               </p>
-          </section>
-
      </main>
 
      <footer class="parent_foot">
@@ -185,7 +155,7 @@ rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
 </a>
 
                <a href="tel:+45-28965070">
-                    <p>+45 2896 5070</p>
+
 
                     <i class="fa fa-phone-square" style="font-size:36px"></i>
 
@@ -193,17 +163,11 @@ rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
           </div>
      </footer>
 
-     <!-------------------------------
-    JQUERY
-    --------------------------------->
-
      <script src="js/jquery-2.1.1.js"></script>
      <script src="js/main.js"></script>
-     <!-- Resource jQuery -->
 
-     <!-------------------------------
-    RESPONSIVE END
-    --------------------------------->
+
+
 
 </body>
 
