--- a/ux.html
+++ b/ux.html
@@ -11,6 +11,13 @@
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#00aba9">
+     <meta name="theme-color" content="#ffffff">
      <title>Kroghport</title>
 </head>
 
@@ -32,13 +39,9 @@
           <div id="cd-intro-tagline">
                <h1>KEA semester portfolio</h1>
           </div>
-          <!-- #cd-intro-tagline -->
      </section>
-     <!-- #cd-intro -->
-
      <div class="cd-secondary-nav">
           <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
           <nav>
                <ul>
                     <li>
@@ -50,12 +53,6 @@
                     <li>
                          <a href="#cd-placeholder-2">
 						<b>Joe &amp; The Juice</b>
-						<span></span><!-- icon -->
-					</a>
-                    </li>
-                    <li>
-                         <a href="#cd-placeholder-3">
-						<b>Example</b>
 						<span></span><!-- icon -->
 					</a>
                     </li>
@@ -86,8 +83,6 @@
 
 
           </section>
-          <!-- #cd-placeholder-1 -->
-
           <section id="cd-placeholder-2" class="cd-section cd-container">
                <h2 id="h2-center">Joe &amp; The juice Loyalty App</h2>
           </section>
@@ -103,41 +98,6 @@
                </div>
           </div>
 
-          <section id="cd-placeholder-3" class="cd-section cd-container">
-
-
-
-               <section id="cd-placeholder-3" class="cd-section cd-container">
-
-
-               </section>
-               <section id="cd-placeholder-3" class="cd-section cd-container">
-
-               </section>
-
-               <section id="cd-placeholder-3" class="cd-section cd-container">
-
-               </section>
-
-
-
-               <!--
-          <h2>Example</h2>
-          <div class="iframe">
-               <iframe src="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html#" height="650" width="90%" style="background-color: white">
-
-
-               </iframe>
-          </div>
-          <p>
-               Stilart-site lavet til studiestart prøven. Her vist i mobil-format, men den fulde desktop side kan ses her: <a href="http://www.kroghport.dk/kea/01-webdesign/01.04-responsive/01_04_04_responsive_v3/index.html">Stilart Site</a>
-          </p>
--->
-
-          </section>
-
-          <!-- #cd-placeholder-3 -->
-
           <footer class="parent_foot">
 
                <div class="content_foot">
@@ -150,8 +110,7 @@ rikk626a@stud.kea.dk"><i class="fa fa-envelope" style="font-size:36px">
                <i class="fa fa-facebook-square" style="font-size:36px"></i>
                </a>
 
-                    <a href="www.linkedin.com/in/
-rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
+                    <a href="https://www.linkedin.com/in/rikke-krogh1991/"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
 </a>
 
                     <a href="tel:+45-28965070">
