--- a/video.html
+++ b/video.html
@@ -11,6 +11,13 @@
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#00aba9">
+     <meta name="theme-color" content="#ffffff">
      <title>Kroghport</title>
 </head>
 
@@ -24,76 +31,47 @@
                     <li><a href="#0">Example</a></li>
                </ul>
           </nav>
-          <!-- cd-primary-nav -->
-          <!-------------------------------------------------------------
-          <nav>
-               <ul>
-                    <li>
-                         <a href="index.html>Home</a>
-                    </li>
-                    <li>
-                         <a href="#">About</a>
-                    </li>
-                    <li>
-                         <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                         <a href="#">Contact</a>
-
-                    </li>
-                    <li>
-                         <a href="#">Timeline</a>
-
-                    </li>
-               </ul>
-          </nav>
-          ----------------------------------->
      </header>
-     <!-----------------------------------------
-     responsive
-     ------------------------------------------->
+
 
      <section id="cd-intro">
           <div id="cd-intro-tagline">
                <h1>KEA semester portfolio</h1>
           </div>
-          <!-- #cd-intro-tagline -->
      </section>
-     <!-- #cd-intro -->
+
 
      <div class="cd-secondary-nav">
           <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
           <nav>
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
 						<b>Intro</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
 						<b>Cases</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-3">
 						<b>Example</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="index.html">
 						<b>Home</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                </ul>
           </nav>
      </div>
-     <!-- .cd-secondary-nav -->
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Video</h2>
@@ -101,113 +79,55 @@
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
                </p>
           </section>
-          <!-- #cd-placeholder-1 -->
-
           <section id="cd-placeholder-2" class="cd-section cd-container">
           </section>
 
-          <div class="section-video">
-               <div class="container">
-                    <div class="grid">
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/3dlW3RYv7BY?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h1>EN KUNDE SOM DIG ØVELSE</h1>
-                              <p>HER ER LIDT TEKST OM PROJEKTET LORELdgdfgg gdfgdgfd dfhfdhfhdhdhdhd hdhh
-                              </p>
-                         </div>
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/w1-iRRmctek?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h1>Example</h1>
-                              <p>TEKST HER</p>
-
-                         </div>
-
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/X9B2aATnvGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h1>Example</h1>
-                              <p>TEKST HER</p>
-                         </div>
+          <div class="container">
 
 
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/q5xEpkNOOVU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h1>Example</h1>
-                              <p>TEKST HER</p>
-                         </div>
 
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h1>Example</h1>
-                              <p>TEKST HER</p>
-                         </div>
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/q5xEpkNOOVU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <h2>Example</h2>
+                    <p>TEKST HER</p>
+               </div>
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <h2>Example</h2>
+                    <p>TEKST HER</p>
+               </div>
 
-                         <div class="cell">
-                              <iframe class="resp-video" height="400px" width="400px" src="https://player.vimeo.com/video/237039079" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen> </iframe>
-                              <h1>Example</h1>
-                              <p>TEKST HER</p>
-                         </div>
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/3dlW3RYv7BY?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <h2>EN KUNDE SOM DIG ØVELSE</h2>
+                    <p>HER ER LIDT TEKST OM PROJEKTET LORELdgdfgg gdfgdgfd dfhfdhfhdhdhdhd hdhh
+                    </p>
+               </div>
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/w1-iRRmctek?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <h2>Example</h2>
+                    <p>TEKST HER</p>
+
+               </div>
+
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/X9B2aATnvGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <h2>Example</h2>
+                    <p>TEKST HER</p>
+               </div>
 
 
-                    </div>
+               <div class="cell">
+                    <iframe class="resp-video" height="400px" width="900px" src="https://player.vimeo.com/video/237039079" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen> </iframe>
+                    <h2>Example</h2>
+                    <p>TEKST HER</p>
                </div>
           </div>
-          <br>
 
-
-          <!-- #Video-placeholders
-               <section id="cd-placeholder-3" class="cd-section cd-container">
-
-          <div class="video-container">
-               <div class="video-grid">
-                    <div class="video-holder">
-                         <div class="resp-video">
-                              <iframe src="https://www.youtube.com/embed/3dlW3RYv7BY?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h2>TEEEEKST</h2>
-                              <p>Stilart-site lavet til studiestart prøve
-                              </p>
-                         </div>
-                         <div class="resp-video">
-                              <iframe src="https://www.youtube.com/embed/w1-iRRmctek?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h2>Example</h2>
-                              <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses </p>
-                         </div>
-                         <div class="resp-video">
-                              <iframe src="https://player.vimeo.com/video/237039079" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-                              <h2>Example</h2>
-                              <p>TEKST HER</p>
-                         </div>
-                         <div class="resp-video">
-                              <iframe src="https://www.youtube.com/embed/q5xEpkNOOVU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h2>Example</h2>
-                              <p>20 Bokse. Css/html transformation øvelse.</p>
-                         </div>
-
-                         <div class="resp-video">
-                              <iframe src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h2>Example</h2>
-                              <p>TEKST HER</p>
-                         </div>
-                         <div class="resp-video">
-                              <iframe src="https://www.youtube.com/embed/X9B2aATnvGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                              <h2>Example</h2>
-                              <p>TEKST HER</p>
-
-                         </div>
-                    </div>
-               </div>
-          </div>
-          <!-- #cd-placeholder-3
-          </section>
--->
+          <section id="cd-placeholder-3" class="cd-section cd-container"></section>
 
      </main>
-
-     <!-- .cd-main-content -->
-
-     <script src="js/jquery-2.1.1.js"></script>
-     <script src="js/main.js"></script>
-     <!-- Resource jQuery -->
-
+     <br>
 
      <footer class="parent_foot">
 
@@ -226,12 +146,15 @@ rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
 </a>
 
                <a href="tel:+45-28965070">
-               <i class="fa fa-phone-square" style="font-size:36px"></i>
-</a>
+
+
+                    <i class="fa fa-phone-square" style="font-size:36px"></i>
+
+               </a>
           </div>
      </footer>
-
-
+     <script src="js/jquery-2.1.1.js"></script>
+     <script src="js/main.js"></script>
 </body>
 
 </html>
