--- a/webdesign.html
+++ b/webdesign.html
@@ -7,10 +7,16 @@
      <link rel="stylesheet" href="css/stylesheet.css">
      <link rel="stylesheet" href="css/reset.css">
      <link rel="stylesheet" href="portfolo/css/port.css">
-     <!-- CSS reset -->
      <link rel="stylesheet" href="css/style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
+     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+     <link rel="manifest" href="/site.webmanifest">
+     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+     <meta name="msapplication-TileColor" content="#00aba9">
+     <meta name="theme-color" content="#ffffff">
      <title>Kroghport</title>
 </head>
 
@@ -18,10 +24,11 @@
      <header class="cd-header">
           <nav class="cd-primary-nav">
                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#0">About</a></li>
-                    <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Example</a></li>
+                    <li><a href="intro.html">Home</a></li>
+                    <li><a href="#cd-placeholder-1">Intro</a></li>
+                    <li><a href="#cd-placeholder-2">Stilart-site</a></li>
+                    <li><a href="#cd-placeholder-3">Re-design</a></li>
+                    <li><a href="#cd-placeholder-4">Css øvelser</a></li>
                </ul>
           </nav>
      </header>
@@ -48,7 +55,7 @@
                     </li>
                     <li>
                          <a href="#cd-placeholder-3">
-						<b>Draør bistro</b>
+						<b>Re-design</b>
 						<span></span>
 					</a>
                     </li>
@@ -59,9 +66,8 @@
 						<span></span>
 					</a>
                     </li>
-
                     <li>
-                         <a href="index.html">
+                         <a href="intro.html">
 						<b>Home</b>
 						<span></span>
 					</a>
