--- a/intro.html
+++ b/intro.html
@@ -16,16 +16,18 @@
      <link rel="manifest" href="/site.webmanifest">
      <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
      <meta name="msapplication-TileColor" content="#00aba9">
-     <meta name="theme-color" content="#ffffff">s
+     <meta name="theme-color" content="#ffffff">
      <title>Kroghport</title>
 </head>
 
 <body>
      <header class="cd-header">
+          <div id="cd-back">
+               <span href="intro.html"><i class="fa fa-chevron-left" style="font-size:25px;color:#FFF"></i></span></div>
           <nav class="cd-primary-nav">
 
                <ul>
-                    <li><a href="#cd-intro">Home</a></li>
+                    <li><a href="#cd-intro">Intro</a></li>
                     <li><a href="#cd-placeholder-1">Om</a></li>
                     <li><a href="#cd-placeholder-2">Portfolio</a></li>
                </ul>
@@ -34,52 +36,49 @@
      </header>
 
      <section id="cd-intro">
+
           <div id="cd-intro-tagline">
                <h1>KEA semester portfolio</h1>
           </div>
-          <!-- #cd-intro-tagline -->
 
      </section>
 
 
-     <!-- #cd-intro -->
-
      <div class="cd-secondary-nav">
-          <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
+          <div id="cd-back-2">
+               <span href="intro.html"><i class="fa fa-chevron-left" style="font-size:25px;color:#FFF"></i></span>
+          </div>
           <nav>
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
 						<b>Om</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
 						<b>Portfolio</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-intro">
-						<b>Home</b>
-						<span></span><!-- icon -->
+						<b>Intro</b>
+						<span></span>
 					</a>
                     </li>
                </ul>
           </nav>
      </div>
-     <!-- .cd-secondary-nav -->
+
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Om</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
+               <p>Jeg er studerende på KEA - Multimediedesign linjen, og her er mit første semesters portfolio.
                </p>
                <img src="img/prof_pic_1jpg.jpg" alt="billed">
           </section>
-          <!-- #cd-placeholder-1 -->
 
           <section id="cd-placeholder-2" class="cd-section cd-container">
                <h2>Portfolio</h2>
