--- a/animation.html
+++ b/animation.html
@@ -22,6 +22,8 @@
 
 <body>
      <header class="cd-header">
+          <div id="cd-back">
+               <span href="intro.html"><i class="fa fa-chevron-left" onclick="history.back(-1)" style="font-size:25px;color:#FFF"></i></span></div>
           <nav class="cd-primary-nav">
                <ul>
                     <li><a href="index.html">Home</a></li>
@@ -42,33 +44,33 @@
 
 
      <div class="cd-secondary-nav">
-          <a href="#0" class="cd-secondary-nav-trigger">Menu<span></span></a>
-          <!-- button visible on small devices -->
+          <div id="cd-back-2">
+               <span href="intro.html"><i class="fa fa-chevron-left" onclick="history.back(-1)" style="font-size:25px;color:#FFF"></i></span></div>
           <nav>
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
 						<b>Animation Intro</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
 						<b>Animations projektet</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
 
                     <li>
                          <a href="#cd-placeholder-4">
 						<b>Animations øvelser</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="index.html">
 						<b>Home</b>
-						<span></span><!-- icon -->
+						<span></span>
 					</a>
                     </li>
                </ul>
@@ -164,15 +166,10 @@ rikke-krogh1991"><i class="fa fa-linkedin-square" style="font-size:36px"></i>
                </div>
           </footer>
      </main>
-     <!-- .cd-main-content -->
 
      <script src="js/jquery-2.1.1.js"></script>
      <script src="js/main.js"></script>
-     <!-- Resource jQuery -->
 
-     <!-------------------------------
-    RESPONSIVE END
-    --------------------------------->
 
 </body>
 
