--- a/animation.html
+++ b/animation.html
@@ -27,10 +27,9 @@
           <nav class="cd-primary-nav">
                <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#0">About</a></li>
-                    <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Contact</a></li>
-                    <li><a href="#0">Timeline</a></li>
+                    <li><a href="#cd-placeholder-1">Intro</a></li>
+                    <li><a href="#cd-placeholder-2">Animations projektet</a></li>
+                    <li><a href="#cd-placeholder-3">Animations øvelser</a></li>
                </ul>
           </nav>
      </header>
@@ -50,7 +49,7 @@
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
-						<b>Animation Intro</b>
+						<b>Intro</b>
 						<span></span>
 					</a>
                     </li>
@@ -62,7 +61,7 @@
                     </li>
 
                     <li>
-                         <a href="#cd-placeholder-4">
+                         <a href="#cd-placeholder-3">
 						<b>Animations øvelser</b>
 						<span></span>
 					</a>
@@ -125,7 +124,7 @@
           </div>
           <br>
 
-          <section id="cd-placeholder-4" class="cd-section cd-container">
+          <section id="cd-placeholder-3" class="cd-section cd-container">
                <h2>CSS Animation øvelser</h2>
           </section>
           <br>
