--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="da" class="animated fadeIn">
+
 <head>
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="intro.css">
+     <link rel="stylesheet" href="css/intro.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="css/transition.css">
      <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -37,4 +38,5 @@
           <a href="intro.html" class="enter-knap">ENTER</a>
      </div>
 </body>
+
 </html>
