--- a/video.html
+++ b/video.html
@@ -28,9 +28,8 @@
           <nav class="cd-primary-nav">
                <ul>
                     <li><a href="intro.html">Home</a></li>
-                    <li><a href="#0">About</a></li>
+                    <li><a href="#0">Intro</a></li>
                     <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Example</a></li>
                </ul>
           </nav>
      </header>
